--- a/src/components/cssSlider/cssSlider.module.css
+++ b/src/components/cssSlider/cssSlider.module.css
@@ -7,7 +7,8 @@
 
 .wrapper {
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
+  margin-top: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
