--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,6 +5,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.8);
 }
 
 /* .logo {
@@ -14,25 +15,38 @@
 } */
 
 .treeLogo {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
 }
 
 .btnContainer {
     display: flex;
-    gap: 20px;
+    gap: 3rem;
+    margin-right: 50px;
 }
 
 .navBtn {
-    width: 80px;
-    height: 30px;
-    cursor: pointer;
-    margin: 50px;
-    border-radius: 20px;
-    transition: all 0.3s ease-in-out;
-    flex-grow: 1;
+    color: black;
+    text-decoration: none;
+    font-size: 1rem;
+    border: none;
+    background: none;
+
 }
 
-.navBtn:hover {
-    width: 120px;
+.navBtn::before {
+    margin-left: auto;
+}
+
+.navBtn::after, .navBtn::before {
+    content: '';
+    width: 0%;
+    height: 1px;
+    background: black;
+    display: block;
+    transition: 0.5s;
+}
+
+.navBtn:hover::after, .navBtn:hover::before {
+    width: 100%;
 }
