--- a/src/pages/Animations/Animations.module.css
+++ b/src/pages/Animations/Animations.module.css
@@ -1,4 +1,4 @@
-.animationContainer {
+.flickerContainer {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,4 +12,16 @@
   border: solid black 1px;
   border-radius: 0.75rem;
   box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.8);
+}
+
+.flickerText {
+  display: flex;
+  width: 400px;
+  height: 200px;
+  /* border: solid black 1px; */
+  border-radius: 0.75rem;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.8);
+  background-color: #1a1a1a;
 }
