--- a/src/pages/Animations/Animations.module.css
+++ b/src/pages/Animations/Animations.module.css
@@ -1,18 +1,18 @@
 .flickerContainer {
   display: flex;
   justify-content: center;
-  align-items: center;
+  margin-top: 200px;
   height: 90vh;
 }
 
-.card {
+/* .card {
   display: flex;
   width: 200px;
   height: 200px;
   border: solid black 1px;
   border-radius: 0.75rem;
   box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.8);
-}
+} */
 
 .flickerText {
   display: flex;
