--- a/src/pages/Test/Test.module.css
+++ b/src/pages/Test/Test.module.css
@@ -1,3 +1,7 @@
-h1 {
-    color: red;
+.imageContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  margin-top: 5rem;
 }
